criando e listando products
